--- a/CoffeApp/CoffeApp/Pages/InfoPage.xaml
+++ b/CoffeApp/CoffeApp/Pages/InfoPage.xaml
@@ -9,7 +9,8 @@
             
              x:Class="CoffeApp.Pages.InfoPage">
     <ContentPage.Content>
-        <StackLayout Margin="0,0,0,25" VerticalOptions="End" >
+        <ScrollView>
+            <StackLayout Margin="0,0,0,25" VerticalOptions="End" >
 
             <forms:AnimationView 
                 x:Name="animationView" 
@@ -56,5 +57,6 @@
                 </Image.GestureRecognizers>
             </Image>
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
