--- a/CoffeApp/CoffeApp/Pages/CategoryMenuPage.xaml
+++ b/CoffeApp/CoffeApp/Pages/CategoryMenuPage.xaml
@@ -7,18 +7,34 @@
 			 mc:Ignorable="d"
 			 x:Class="CoffeApp.Pages.CategoryMenuPage">
     <ContentPage.Content>
-        <ListView SeparatorVisibility="None" HasUnevenRows="True" x:Name="LvCategoryMenu" ItemSelected="LvCategoryMenu_OnItemSelected" BackgroundColor="Black" >
+        <ListView 
+            SeparatorVisibility="None"
+            HasUnevenRows="True"
+            x:Name="LvCategoryMenu"
+            ItemSelected="LvCategoryMenu_OnItemSelected"
+            BackgroundColor="Black" >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <Grid>
                             <!--<Image Source="{Binding Image}" HeightRequest="250" Aspect="Fill"/>-->
-                            <forms:CachedImage Aspect="Fill" WidthRequest="300" HeightRequest="300"
-											   DownsampleToViewSize="true"
-											   Source = "{Binding Image}" CacheType="All">
+                            <forms:CachedImage
+                                Aspect="Fill" 
+                                WidthRequest="300"
+                                HeightRequest="300"
+								DownsampleToViewSize="true"
+								Source = "{Binding Image}" 
+                                CacheType="All">
                             </forms:CachedImage>
-                            <BoxView BackgroundColor="Black" Opacity="0.2"/>
-                            <Label Text="{Binding Name}" FontSize="Large" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            <BoxView 
+                                BackgroundColor="Black"
+                                Opacity="0.2"/>
+                            <Label 
+                                Text="{Binding Name}"
+                                FontSize="Large"
+                                TextColor="White"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"/>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
