--- a/CoffeApp/CoffeApp/Pages/FirstMenu.xaml
+++ b/CoffeApp/CoffeApp/Pages/FirstMenu.xaml
@@ -8,24 +8,46 @@
              x:Class="CoffeApp.Pages.FirstMenu">
     <ContentPage.Content>
         <Grid>
-            <ListView SeparatorVisibility="None" HasUnevenRows="True" x:Name="LvFirstMenu" ItemSelected="LvFirstMenu_OnItemSelected" >
+            <ListView 
+                SeparatorVisibility="None" 
+                HasUnevenRows="True" 
+                x:Name="LvFirstMenu" 
+                ItemSelected="LvFirstMenu_OnItemSelected" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <Grid>
                                 <!--<Image Source="{Binding Image}" HeightRequest="250" Aspect="Fill"/>-->
-                                <forms:CachedImage x:Name="Image" Aspect="Fill" WidthRequest="300" HeightRequest="300"
-                                                   DownsampleToViewSize="true"
-                                                   Source = "{Binding Image}" CacheType="All">
+                                <forms:CachedImage
+                                    x:Name="Image" 
+                                    Aspect="Fill" 
+                                    WidthRequest="300" 
+                                    HeightRequest="300"
+                                    DownsampleToViewSize="true"
+                                    Source = "{Binding Image}" 
+                                    CacheType="All">
                                 </forms:CachedImage>
-                                <BoxView BackgroundColor="Black" Opacity="0.2"/>
-                                <Label Text="{Binding Name}" FontSize="Large" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                <BoxView 
+                                    BackgroundColor="Black" 
+                                    Opacity="0.2"/>
+                                <Label 
+                                    Text="{Binding Name}"
+                                    FontSize="Large" 
+                                    TextColor="White" 
+                                    HorizontalOptions="Center"
+                                    VerticalOptions="Center"/>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <ActivityIndicator x:Name="BusyIndicator" StyleId="" HorizontalOptions="Center" VerticalOptions="Center" Color="White" IsRunning="True">
+            <ActivityIndicator 
+                x:Name="BusyIndicator" 
+                StyleId="" 
+                HorizontalOptions="Center"
+                VerticalOptions="Center"
+                Color="White" 
+                IsRunning="True">
             </ActivityIndicator>
         </Grid>
     </ContentPage.Content>
